# World_Cup_Forecast

./: .env.example  .gitignore  README.md  pyproject.toml  start.bat
apps/api/: main.py
apps/web/: index.html  package-lock.json  package.json
apps/web/src/: App.tsx  api.ts  styles.css
apps/web/src/components/: Backtest.tsx  GraphView.tsx  Header.tsx  Home.tsx  MarkdownView.tsx  OddsLog.tsx  ReasoningTrace.tsx  Settings.tsx  Tournament.tsx  Workbench.tsx
data/: wc_results.csv
data/samples/: 500_jczq_sample.html  china_lottery_sample.html
scripts/: dev.ps1
tests/: conftest.py  test_agents.py  test_api.py  test_backtest.py  test_graph.py  test_ingest.py  test_modeling.py  test_odds.py  test_odds_cleaner.py  test_tournament.py
