[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "world-cup-forecast"
version = "0.1.0"
description = "Explainable multi-agent World Cup forecasting and betting edge analysis."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "apscheduler>=3.10.4",
  "beautifulsoup4>=4.12.3",
  "duckdb>=1.0.0",
  "fastapi>=0.115.0",
  "feedparser>=6.0.11",
  "httpx>=0.27.0",
  "numpy>=1.26.4",
  "pandas>=2.2.2",
  "playwright>=1.45.0",
  "polars>=1.5.0",
  "pydantic>=2.8.2",
  "python-dotenv>=1.0.1",
  "scikit-learn>=1.5.1",
  "shap>=0.46.0",
  "uvicorn[standard]>=0.30.5",
  "xgboost>=2.1.1"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.2",
  "pytest-asyncio>=0.23.8",
  "ruff>=0.6.2"
]

[tool.setuptools.packages.find]
where = ["packages"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["packages", "."]

[tool.ruff]
line-length = 100
target-version = "py312"

